WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132577
AX: VoiceOver does not announce text changes for content editable regions in Safari
https://bugs.webkit.org/show_bug.cgi?id=132577
Summary
AX: VoiceOver does not announce text changes for content editable regions in ...
chris fleizach
Reported
2014-05-05 12:27:08 PDT
Created
attachment 230844
[details]
test case See the test case attached. VoiceOver is not announcing the text changes for content editable regions. If you remove the "role" attribute, you do get the announcements, but VoiceOver incorrectly speaks the title of the HTML page along with the selection changes. Test Case #1 - No announcements 1. Open the test1.html file attached to this radar 2. Turn on VoiceOver 3. Click inside the content editable region 4. Wait for the timer to fire twice, notice that no changes were announced Test Case #2 - Multiple announcements overrunning each other 1. Open the test2.html file attached to this radar 2. Turn on VoiceOver 3. Click inside the content editable region 4. Wait for the timer to fire twice, notice that VoiceOver speaks the announcements, but incorrectly speaks the title of the HTML file and it interrupts the correct announcement that tells the user what changed in the selection. <
rdar://problem/15429607
>
Attachments
test case
(1.09 KB, text/html)
2014-05-05 12:27 PDT
,
chris fleizach
no flags
Details
patch
(9.15 KB, patch)
2014-05-05 12:28 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2014-05-05 12:28:59 PDT
Created
attachment 230845
[details]
patch
WebKit Commit Bot
Comment 2
2014-05-06 09:17:48 PDT
Comment on
attachment 230845
[details]
patch Clearing flags on attachment: 230845 Committed
r168360
: <
http://trac.webkit.org/changeset/168360
>
WebKit Commit Bot
Comment 3
2014-05-06 09:17:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug