AX: VoiceOver does not announce text changes for content editable regions in Safari https://bugs.webkit.org/show_bug.cgi?id=132577

Reviewed by Mario Sanchez Prada.

Source/WebCore:
When text or children are changed inside of a contenteditable region, we need to
convert those actions into AXValueChange notifications.

Test: accessibility/content-editable-set-inner-text-generates-axvalue-notification.html

* accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::childrenChanged):
(WebCore::AccessibilityNodeObject::hasContentEditableAttributeSet): Deleted.
* accessibility/AccessibilityNodeObject.h:
* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::hasContentEditableAttributeSet):
* accessibility/AccessibilityObject.h:
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::textChanged):

LayoutTests:
* accessibility/content-editable-set-inner-text-generates-axvalue-notification-expected.txt: Added.
* accessibility/content-editable-set-inner-text-generates-axvalue-notification.html: Added.


Canonical link: https://commits.webkit.org/150635@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168360 268f45cc-cd09-0410-ab3c-d52691b4dbfc