Source/WebCore/accessibility/AccessibilityObject.h
@@ -846,6 +846,7 @@ public:
     static const String defaultLiveRegionStatusForRole(AccessibilityRole);
     static bool liveRegionStatusIsEnabled(const AtomicString&);
     static bool contentEditableAttributeIsEnabled(Element*);
+    bool hasContentEditableAttributeSet() const;
     
     bool supportsARIAAttributes() const;
     
